--- a/index.html
+++ b/index.html
@@ -5,15 +5,40 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Robert Harrison Portfolio</title>
+  <title>Robert Harrison</title>
   <meta name="description" content="A simple Portfolio.">
   <meta name="Robert Harrison" content="Portfolio">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
 
 </head>
 
 <body>
+    <div class="main-nav">
+        <a href="/" class="">
+          <img
+            src="../img/LogoMakr-16An8o.png" 
+            alt="logo"
+            width="24"
+            height="24"
+          />
+        </a>
+      </div>
+      <div class="main-content">
+        <div class="left-content">
+          left
+        </div>
+        <div class="right-content">
+          right
+        </div>
+      </div>
+
+      <footer>
+        bob
+
+      </footer>
   <!-- your content here... -->
+
+  
   <script src="js/scripts.js"></script>
 </body>
 </html>
