developing home page plain css html

--- a/index.html
+++ b/index.html
@@ -13,32 +13,72 @@
 </head>
 
 <body>
-    <div class="main-nav">
-        <a href="/" class="">
-          <img
-            src="../img/LogoMakr-16An8o.png" 
-            alt="logo"
-            width="24"
-            height="24"
-          />
+  <div class="main-nav">
+    <nav>
+      <div class="left-nav">
+        <a href="/">
+          <h2>Home</h2>
         </a>
       </div>
-      <div class="main-content">
-        <div class="left-content">
-          left
-        </div>
-        <div class="right-content">
-          right
-        </div>
+        <div class="right-nav">
+          <a href="/">
+            <h2>About</h2>
+          </a>
+          <a href="/">
+            <h2>Contact</h2>
+          </a>
+        </nav>
+      </div>
       </div>
 
-      <footer>
-        bob
+      <div class="outer">
+      <div class="main-content">
+          <div class="parent-div">
+            <div class="child-div-left">
+              <h1>
+                I’m Robert Harrison, a software engineer based in UK. Available for freelance & collaborations.
+              </h1>
+            </div>
+            <div class="child-div-right" >
+              <img src="img/background.png" alt="Laptop" width="600" height="600" className=" object-contain" />
+            </div>
+        </div>
+      </div>
+    </div>
 
-      </footer>
-  <!-- your content here... -->
+      <ul class="socialList">
+        <li class="socialListItem">
+          <a href="/">
+            <img src="https://img.icons8.com/ios-filled/24/949494/instagram--v1.png" class="social-img" />
+          </a>
+        </li>
+        <li class="socialListItem">
+          <a href="/">
+            <img src="https://img.icons8.com/material-outlined/24/949494/github.png" class="social-img" />
+          </a>
+        </li>
+        <li class="socialListItem">
+          <a href="/">
+            <img src="https://img.icons8.com/ios-glyphs/24/949494/twitter--v1.png" class="social-img" />
+          </Link>
+        </li>
+        <li class="socialListItem">
+          <a href="/">
+            <img src="https://img.icons8.com/ios-glyphs/24/949494/facebook.png" class="social-img" />
+          </a>
+        </li>
+        <li class="socialListItem">
+          <a href="/">
+            <img src="https://img.icons8.com/ios-filled/24/949494/linkedin.png" class="social-img" />
+          </a>
+        </li>
+        <li class="socialListItem">
+          <a href="/">
+            <img src="https://img.icons8.com/ios-glyphs/24/949494/discord-logo.png" class="social-img" />
+          </a>
+        </li>
+      </ul>
 
-  
-  <script src="js/scripts.js"></script>
+
 </body>
 </html>
