--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
         </li>
       </ul>
 
+        <div class="project-container">
+        <div class="project-item">
+          <h2> Project 1</h2>
+          <img src="img/temp2.png" height="300" width="300" />
+        </div>
+        <div class="project-item">
+          <h2> Project 2</h2>
+          <img src="img/temp2.png" height="300" width="300"/>
+
+        </div>
+        </div>
 
 </body>
 </html>
