learning basic css for design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 
   <title>Robert Harrison</title>
   <meta name="description" content="A simple Portfolio.">
@@ -22,7 +23,7 @@
         <div class="right-nav">
           <a href="/">
             <h2>About</h2>
-          </a>
+          </a>        
           <a href="/">
             <h2>Contact</h2>
           </a>
@@ -76,6 +77,7 @@
           </a>
         </li>
       </ul>
+
         <div class="project-container">
         <div class="project-item">
           <h2> Project 1</h2>
@@ -85,6 +87,22 @@
           <h2> Project 2</h2>
           <img src="img/temp2.png" height="300" width="300"/>
 
+        </div>
+        <div class="project-item">
+          <h2> Project 3</h2>
+          <img src="img/temp2.png" height="300" width="300" />
+        </div>
+        <div class="project-item">
+          <h2> Project 4</h2>
+          <img src="img/temp2.png" height="300" width="300" />
+        </div>
+        <div class="project-item">
+          <h2> Project 5</h2>
+          <img src="img/temp2.png" height="300" width="300" />
+        </div>
+        <div class="project-item">
+          <h2> Project 6</h2>
+          <img src="img/temp2.png" height="300" width="300" />
         </div>
         </div>
         <div class="container">
