seperation of projects css

--- a/index.html
+++ b/index.html
@@ -80,29 +80,40 @@
 
         <div class="project-container">
         <div class="project-item">
+          <div class="project-contents">
           <h2> Project 1</h2>
           <img src="img/temp2.png" height="300" width="300" />
         </div>
-        <div class="project-item">
-          <h2> Project 2</h2>
-          <img src="img/temp2.png" height="300" width="300"/>
-
         </div>
         <div class="project-item">
-          <h2> Project 3</h2>
-          <img src="img/temp2.png" height="300" width="300" />
+          <div class="project-contents">
+            <h2> Project 2</h2>
+            <img src="img/temp2.png" height="300" width="300" />
+          </div>
         </div>
         <div class="project-item">
-          <h2> Project 4</h2>
-          <img src="img/temp2.png" height="300" width="300" />
+          <div class="project-contents">
+            <h2> Project 3</h2>
+            <img src="img/temp2.png" height="300" width="300" />
+          </div>
         </div>
         <div class="project-item">
-          <h2> Project 5</h2>
-          <img src="img/temp2.png" height="300" width="300" />
+          <div class="project-contents">
+            <h2> Project 4</h2>
+            <img src="img/temp2.png" height="300" width="300" />
+          </div>
         </div>
         <div class="project-item">
-          <h2> Project 6</h2>
-          <img src="img/temp2.png" height="300" width="300" />
+          <div class="project-contents">
+            <h2> Project 5</h2>
+            <img src="img/temp2.png" height="300" width="300" />
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-contents">
+            <h2> Project 6</h2>
+            <img src="img/temp2.png" height="300" width="300" />
+          </div>
         </div>
         </div>
         <div class="container">
@@ -118,6 +129,7 @@
             <input type="submit" value="Submit">
         
           </form>
-        </div> 
+        </div>
+          
 </body>
 </html>
